src/tests/snapshots/gitu__tests__merge__merge_ff_only.snap
---
source: src/tests/merge.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Recent commits                                                                 |
 46c81ca main other-branch add new-file                          Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git merge --ff-only other-branch                                              |
styles_hash: e56af6906782eac8
