src/tests/snapshots/gitu__tests__merge__merge_picker.snap
---
source: src/tests/merge.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                       Author Name __ |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 7/7   Merge › █                                                                |
▌bugfix-123                                                                     |
 feature-a                                                                      |
 feature-b                                                                      |
 origin/HEAD                                                                    |
 origin/main                                                                    |
 tag: v1.0.0                                                                    |
 tag: v2.0.0                                                                    |
                                                                                |
                                                                                |
                                                                                |
styles_hash: debce7d14d87f2dc
