src/tests/snapshots/gitu__tests__merge__merge_picker_current_branch_with_same_tag_name.snap
---
source: src/tests/merge.rs
expression: ctx.redact_buffer()
---
 On branch v1.0.0                                                               |
                                                                                |
 Recent commits                                                                 |
 4760d8f v1.0.0 v1.0.0 add branch commit                                        |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 4/4   Merge › █                                                                |
▌main                                                                           |
 refs/tags/v1.0.0                                                               |
 origin/HEAD                                                                    |
 origin/main                                                                    |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 5811f84d139176cf
