src/tests/snapshots/gitu__tests__merge__merge_picker_custom_input.snap
---
source: src/tests/merge.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 0/7   Merge › HEAD~2█                                                          |
▌HEAD~2                                                                         |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 921dd6ef05db5d3c
