src/tests/snapshots/gitu__tests__merge__merge_picker_default_branch_with_same_tag_name.snap
---
source: src/tests/merge.rs
expression: ctx.redact_buffer()
---
 Branches                                                                       |
 * main                                                                         |
   other                                                                        |
   v1.0.0                                                                       |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
────────────────────────────────────────────────────────────────────────────────|
 5/5   Merge › █                                                                |
▌refs/heads/v1.0.0                                                              |
 other                                                                          |
 refs/tags/v1.0.0                                                               |
 origin/HEAD                                                                    |
 origin/main                                                                    |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 33dc324ad4ae7dc3
