src/tests/snapshots/gitu__tests__merge__merge_picker_duplicate_branch_tag_names.snap
---
source: src/tests/merge.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 5/5   Merge › █                                                                |
▌other                                                                          |
 refs/heads/v1.0.0                                                              |
 refs/tags/v1.0.0                                                               |
 origin/HEAD                                                                    |
 origin/main                                                                    |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 796d60861d959d60
