src/tests/snapshots/gitu__tests__merge__merge_picker_duplicate_names_select_tag.snap
---
source: src/tests/merge.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Recent commits                                                                 |
 46369c5 main other v1.0.0 add other commit                      Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git merge refs/tags/v1.0.0                                                    |
styles_hash: 81167356eacbf6e1
